syntax = "proto2";

package dempy;

import "base.proto";

message Acquisition {
  required Entity entity = 1;
  required int64 creation_timestamp = 2;
  optional uint32 sync_offset = 3;
  required string time_unit = 4;
  optional string owner_id = 5;
  optional string creator_id = 6;
  optional string dataset_id = 7;
  required Subject subject = 8;
  repeated Device devices = 9;
  required bool has_timeseries_samples = 10;
  required bool has_image_samples = 11;
  required bool has_video_samples = 12;
}

message Subject {
  required Entity entity = 1;
  required int64 birthdate_timestamp = 2 [default = 0];
  optional string description = 3;
  optional string first_name = 4;
  optional string last_name = 5;
}

message Device {
  required Entity entity = 1;
  optional uint32 sync_offset = 2;
  optional string time_unit = 3;
  optional string serial_number = 4;
  optional string manufacturer = 5;
  optional string model_name = 6;
  repeated Sensor sensors = 7;
}

message Sensor {
  required Entity entity = 1;
  optional uint32 sync_offset = 2;
  optional string time_unit = 3;
  optional string serial_number = 4;
  optional string manufacturer = 5;
  optional string model_name = 6;
  optional string sensor_type = 7;
}
